fix tooltip covering feature modal

--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,5 @@
 }
 
 .tooltip-area {
-  z-index: 300;
+  z-index:10;
 }
